# crypto_asset

./: .gitattributes  .gitignore  LICENSE  README.md  README_zh.md  start_project.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  logger.py
backend/app/models/: asset_models.py
backend/app/routers/: __init__.py  assets.py  blockchain.py  data_aggregator.py  database.py  history.py  price_service.py  tokens.py
backend/app/services/: asset_history_service.py  asset_service.py  blockchain_service.py  data_aggregator.py  data_providers.py  db_asset_service.py  db_token_service.py  enhanced_history_service.py  history_cache_service.py  history_updater_service.py  price_service.py  token_discovery_service.py  token_library_service.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app-modular.js  app.js  switch-to-modular.js
frontend/js/modules/: api-service.js  asset-manager.js  chart-manager.js  config.js  ui-manager.js  utils.js  validation-service.js
