[project]
name = "crypto-asset-manager"
version = "0.1.0"
description = "加密货币资产管理后端"
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "fastapi>=0.115.12",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "web3>=6.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.12.0",
    "aiosqlite>=0.21.0",
]
